--- a/templates/mustache-templates/teamsBot.js.mustache
+++ b/templates/mustache-templates/teamsBot.js.mustache
@@ -1,13 +1,10 @@
 {{#IS_ME}}
 const axios = require("axios");
 const querystring = require("querystring");
-const { TeamsActivityHandler, CardFactory } = require("botbuilder");
 {{/IS_ME}}
-{{#IS_BOT}}
-const { TeamsActivityHandler, ActionTypes, CardFactory } = require("botbuilder");
-{{/IS_BOT}}
+const { TeamsActivityHandler, CardFactory{{#IS_BOT}}, ActionTypes{{/IS_BOT}}} = require("botbuilder");
 
-class TeamsBot extends TeamsActivityHandler {
+class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
   {{#IS_BOT}}
   /**
    * @param {ConversationState} conversationState
@@ -238,4 +235,4 @@ function shareMessageCommand(context, action) {
 }
 {{/IS_ME}}
 
-module.exports.TeamsBot = TeamsBot;
+module.exports.{{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} = {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}};
