--- a/templates/mustache-templates/teamsBot.js.mustache
+++ b/templates/mustache-templates/teamsBot.js.mustache
@@ -1,28 +1,17 @@
-import { default as axios } from "axios";
-import * as querystring from "querystring";
+{{#IS_ME}}
+const axios = require("axios");
+const querystring = require("querystring");
+{{/IS_ME}}
+const { TeamsActivityHandler, CardFactory{{#IS_BOT}}, ActionTypes{{/IS_BOT}}} = require("botbuilder");
 
-import {
-  TeamsActivityHandler,
-  SigninStateVerificationQuery,
-  ActionTypes,
-  CardFactory,
-  BotState,
-  TurnContext,
-} from "botbuilder";
-import { MainDialog } from "./dialogs/mainDialog";
-
-export class TeamsBot extends TeamsActivityHandler {
-  conversationState: BotState;
-  userState: BotState;
-  dialog: MainDialog;
-  dialogState: any;
-
+class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
+  {{#IS_BOT}}
   /**
    * @param {ConversationState} conversationState
    * @param {UserState} userState
    * @param {Dialog} dialog
    */
-  constructor(conversationState: BotState, userState: BotState, dialog: MainDialog) {
+  constructor(conversationState, userState, dialog) {
     super();
     if (!conversationState) {
       throw new Error("[TeamsBot]: Missing parameter. conversationState is required");
@@ -70,7 +59,7 @@ export class TeamsBot extends TeamsActivityHandler {
     });
   }
 
-  async run(context: TurnContext) {
+  async run(context) {
     await super.run(context);
 
     // Save any state changes. The load happened during the execution of the Dialog.
@@ -78,25 +67,31 @@ export class TeamsBot extends TeamsActivityHandler {
     await this.userState.saveChanges(context, false);
   }
 
-  async handleTeamsSigninVerifyState(context: TurnContext, query: SigninStateVerificationQuery) {
+  async handleTeamsSigninVerifyState(context, query) {
     console.log("Running dialog with signin/verifystate from an Invoke Activity.");
     await this.dialog.run(context, this.dialogState);
   }
 
-  async handleTeamsSigninTokenExchange(context: TurnContext, query: SigninStateVerificationQuery) {
+  async handleTeamsSigninTokenExchange(context, query) {
     await this.dialog.run(context, this.dialogState);
   }
 
-  async onSignInInvoke(context: TurnContext) {
+  async onTokenResponseEvent(context) {
+    console.log("Running dialog with Token Response Event Activity.");
+
+    // Run the Dialog with the new Token Response Event Activity.
     await this.dialog.run(context, this.dialogState);
   }
 
+  async onSignInInvoke(context) {
+    await this.dialog.run(context, this.dialogState);
+  }
+  {{/IS_BOT}}
+
+  {{#IS_ME}}
   // Message Extension Code
   // Action.
-  public async handleTeamsMessagingExtensionSubmitAction(
-    context: TurnContext,
-    action: any
-  ): Promise<any> {
+  handleTeamsMessagingExtensionSubmitAction(context, action) {
     switch (action.commandId) {
       case "createCard":
         return createCardCommand(context, action);
@@ -108,7 +103,7 @@ export class TeamsBot extends TeamsActivityHandler {
   }
 
   // Search.
-  public async handleTeamsMessagingExtensionQuery(context: TurnContext, query: any): Promise<any> {
+  async handleTeamsMessagingExtensionQuery(context, query) {
     const searchQuery = query.parameters[0].value;
     const response = await axios.get(
       `http://registry.npmjs.com/-/v1/search?${querystring.stringify({
@@ -138,10 +133,7 @@ export class TeamsBot extends TeamsActivityHandler {
     };
   }
 
-  public async handleTeamsMessagingExtensionSelectItem(
-    context: TurnContext,
-    obj: any
-  ): Promise<any> {
+  async handleTeamsMessagingExtensionSelectItem(context, obj) {
     return {
       composeExtension: {
         type: "result",
@@ -152,8 +144,8 @@ export class TeamsBot extends TeamsActivityHandler {
   }
 
   // Link Unfurling.
-  public async handleTeamsAppBasedLinkQuery(context: TurnContext, query: any): Promise<any> {
-    const attachment = CardFactory.thumbnailCard("Image Preview Card", query.url, [query.url]);
+  handleTeamsAppBasedLinkQuery(context, query) {
+    const attachment = CardFactory.thumbnailCard("Thumbnail Card", query.url, [query.url]);
 
     const result = {
       attachmentLayout: "list",
@@ -166,9 +158,11 @@ export class TeamsBot extends TeamsActivityHandler {
     };
     return response;
   }
+  {{/IS_ME}}
 }
 
-async function createCardCommand(context: TurnContext, action: any): Promise<any> {
+{{#IS_ME}}
+function createCardCommand(context, action) {
   // The user has chosen to create a card by choosing the 'Create Card' context menu command.
   const data = action.data;
   const heroCard = CardFactory.heroCard(data.title, data.text);
@@ -188,7 +182,7 @@ async function createCardCommand(context: TurnContext, action: any): Promise<any
   };
 }
 
-async function shareMessageCommand(context: TurnContext, action: any): Promise<any> {
+function shareMessageCommand(context, action) {
   // The user has chosen to share a message by choosing the 'Share Message' context menu command.
   let userName = "unknown";
   if (
@@ -239,3 +233,6 @@ async function shareMessageCommand(context: TurnContext, action: any): Promise<a
     },
   };
 }
+{{/IS_ME}}
+
+module.exports.{{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} = {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}};
