--- a/templates/mustache-templates/teamsBot.ts.mustache
+++ b/templates/mustache-templates/teamsBot.ts.mustache
@@ -1,15 +1,23 @@
-const axios = require("axios");
-const querystring = require("querystring");
+{{#IS_ME}}
+import { default as axios } from "axios";
+import * as querystring from "querystring";
+{{/IS_ME}}
+import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, SigninStateVerificationQuery, ActionTypes, BotState{{/IS_BOT}}} from "botbuilder";
+{{#IS_BOT}}import { MainDialog } from "./dialogs/mainDialog";{{/IS_BOT}}
 
-const { TeamsActivityHandler, ActionTypes, CardFactory } = require("botbuilder");
+export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
+  {{#IS_BOT}}
+  conversationState: BotState;
+  userState: BotState;
+  dialog: MainDialog;
+  dialogState: any;
 
-class TeamsBot extends TeamsActivityHandler {
   /**
    * @param {ConversationState} conversationState
    * @param {UserState} userState
    * @param {Dialog} dialog
    */
-  constructor(conversationState, userState, dialog) {
+  constructor(conversationState: BotState, userState: BotState, dialog: MainDialog) {
     super();
     if (!conversationState) {
       throw new Error("[TeamsBot]: Missing parameter. conversationState is required");
@@ -57,7 +65,7 @@ class TeamsBot extends TeamsActivityHandler {
     });
   }
 
-  async run(context) {
+  async run(context: TurnContext) {
     await super.run(context);
 
     // Save any state changes. The load happened during the execution of the Dialog.
@@ -65,29 +73,27 @@ class TeamsBot extends TeamsActivityHandler {
     await this.userState.saveChanges(context, false);
   }
 
-  async handleTeamsSigninVerifyState(context, query) {
+  async handleTeamsSigninVerifyState(context: TurnContext, query: SigninStateVerificationQuery) {
     console.log("Running dialog with signin/verifystate from an Invoke Activity.");
     await this.dialog.run(context, this.dialogState);
   }
 
-  async handleTeamsSigninTokenExchange(context, query) {
+  async handleTeamsSigninTokenExchange(context: TurnContext, query: SigninStateVerificationQuery) {
     await this.dialog.run(context, this.dialogState);
   }
 
-  async onTokenResponseEvent(context) {
-    console.log("Running dialog with Token Response Event Activity.");
-
-    // Run the Dialog with the new Token Response Event Activity.
+  async onSignInInvoke(context: TurnContext) {
     await this.dialog.run(context, this.dialogState);
   }
+  {{/IS_BOT}}
 
-  async onSignInInvoke(context) {
-    await this.dialog.run(context, this.dialogState);
-  }
-
+  {{#IS_ME}}
   // Message Extension Code
   // Action.
-  handleTeamsMessagingExtensionSubmitAction(context, action) {
+  public async handleTeamsMessagingExtensionSubmitAction(
+    context: TurnContext,
+    action: any
+  ): Promise<any> {
     switch (action.commandId) {
       case "createCard":
         return createCardCommand(context, action);
@@ -99,7 +105,7 @@ class TeamsBot extends TeamsActivityHandler {
   }
 
   // Search.
-  async handleTeamsMessagingExtensionQuery(context, query) {
+  public async handleTeamsMessagingExtensionQuery(context: TurnContext, query: any): Promise<any> {
     const searchQuery = query.parameters[0].value;
     const response = await axios.get(
       `http://registry.npmjs.com/-/v1/search?${querystring.stringify({
@@ -129,7 +135,10 @@ class TeamsBot extends TeamsActivityHandler {
     };
   }
 
-  async handleTeamsMessagingExtensionSelectItem(context, obj) {
+  public async handleTeamsMessagingExtensionSelectItem(
+    context: TurnContext,
+    obj: any
+  ): Promise<any> {
     return {
       composeExtension: {
         type: "result",
@@ -140,8 +149,8 @@ class TeamsBot extends TeamsActivityHandler {
   }
 
   // Link Unfurling.
-  handleTeamsAppBasedLinkQuery(context, query) {
-    const attachment = CardFactory.thumbnailCard("Thumbnail Card", query.url, [query.url]);
+  public async handleTeamsAppBasedLinkQuery(context: TurnContext, query: any): Promise<any> {
+    const attachment = CardFactory.thumbnailCard("Image Preview Card", query.url, [query.url]);
 
     const result = {
       attachmentLayout: "list",
@@ -154,9 +163,11 @@ class TeamsBot extends TeamsActivityHandler {
     };
     return response;
   }
+  {{/IS_ME}}
 }
 
-function createCardCommand(context, action) {
+{{#IS_ME}}
+async function createCardCommand(context: TurnContext, action: any): Promise<any> {
   // The user has chosen to create a card by choosing the 'Create Card' context menu command.
   const data = action.data;
   const heroCard = CardFactory.heroCard(data.title, data.text);
@@ -176,7 +187,7 @@ function createCardCommand(context, action) {
   };
 }
 
-function shareMessageCommand(context, action) {
+async function shareMessageCommand(context: TurnContext, action: any): Promise<any> {
   // The user has chosen to share a message by choosing the 'Share Message' context menu command.
   let userName = "unknown";
   if (
@@ -227,5 +238,4 @@ function shareMessageCommand(context, action) {
     },
   };
 }
-
-module.exports.TeamsBot = TeamsBot;
+{{/IS_ME}}
