--- a/templates/bot/js/default/public/auth-start.html
+++ b/templates/bot/js/default/public/auth-start.html
@@ -18,6 +18,7 @@
         var currentURL = new URL(window.location);
         var clientId = currentURL.searchParams.get("clientId");
         var tenantId = currentURL.searchParams.get("tenantId");
+        var email = currentURL.searchParams.get("email");
 
         var scope = currentURL.searchParams.get("scope");
 
@@ -32,6 +33,7 @@
           scope: scope,
           redirect_uri: window.location.origin + "/auth-end.html",
           nonce: _guid(),
+          login_hint: email,
           state: state,
           code_challenge: codeChallenge,
           code_challenge_method: "S256",
