--- a/templates/mustache-templates/teamsBot.ts.mustache
+++ b/templates/mustache-templates/teamsBot.ts.mustache
@@ -2,42 +2,52 @@
 import { default as axios } from "axios";
 import * as querystring from "querystring";
 {{/IS_ME}}
-import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, SigninStateVerificationQuery, ActionTypes, BotState{{/IS_BOT}}} from "botbuilder";
-{{#IS_BOT}}import { MainDialog } from "./dialogs/mainDialog";{{/IS_BOT}}
+import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, Attachment, AdaptiveCardInvokeValue, AdaptiveCardInvokeResponse{{/IS_BOT}}} from "botbuilder";
+{{#IS_BOT}}
+const rawWelcomeCard = require("./adaptiveCards/welcome.json");
+const ACData = require("adaptivecards-templating");
+{{/IS_BOT}}
 
 export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
   {{#IS_BOT}}
-  conversationState: BotState;
-  userState: BotState;
-  dialog: MainDialog;
-  dialogState: any;
+  // record the likeCount
+  likeCountObj: { likeCount: number };
 
-  /**
-   * @param {ConversationState} conversationState
-   * @param {UserState} userState
-   * @param {Dialog} dialog
-   */
-  constructor(conversationState: BotState, userState: BotState, dialog: MainDialog) {
+  constructor() {
     super();
-    if (!conversationState) {
-      throw new Error("[TeamsBot]: Missing parameter. conversationState is required");
-    }
-    if (!userState) {
-      throw new Error("[TeamsBot]: Missing parameter. userState is required");
-    }
-    if (!dialog) {
-      throw new Error("[TeamsBot]: Missing parameter. dialog is required");
-    }
-    this.conversationState = conversationState;
-    this.userState = userState;
-    this.dialog = dialog;
-    this.dialogState = this.conversationState.createProperty("DialogState");
+
+    this.likeCountObj = { likeCount: 0 };
 
     this.onMessage(async (context, next) => {
-      console.log("Running dialog with Message Activity.");
+      console.log("Running with Message Activity.");
 
-      // Run the Dialog with the new message Activity.
-      await this.dialog.run(context, this.dialogState);
+      let txt = context.activity.text;
+      const removedMentionText = TurnContext.removeRecipientMention(
+        context.activity
+      );
+      if (removedMentionText) {
+        // Remove the line break
+        txt = removedMentionText.toLowerCase().replace(/\n|\r/g, "").trim();
+      }
+
+      // Trigger command by IM text
+      switch (txt) {
+        case "welcome": {
+          this.likeCountObj.likeCount = 0;
+          const card = this.renderAdaptiveCard(
+            rawWelcomeCard,
+            this.likeCountObj
+          );
+          await context.sendActivity({ attachments: [card] });
+          break;
+        }
+        /**
+         * case "yourCommand": {
+         *   await context.sendActivity(`Add your command here!`);
+         *   break;
+         * }
+         */
+      }
 
       // By calling next() you ensure that the next BotHandler is run.
       await next();
@@ -47,16 +57,10 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
       const membersAdded = context.activity.membersAdded;
       for (let cnt = 0; cnt < membersAdded.length; cnt++) {
         if (membersAdded[cnt].id) {
-          const cardButtons = [
-            {
-              type: ActionTypes.ImBack,
-              title: "Show introduction card",
-              value: "intro",
-            },
-          ];
-          const card = CardFactory.heroCard("Welcome", null, cardButtons, {
-            text: `Congratulations! Your hello world Bot template is running. This bot has default commands to help you modify it. <br>You can reply <strong>intro</strong> to see the introduction card. This bot is built with <a href=\"https://dev.botframework.com/\">Microsoft Bot Framework</a>`,
-          });
+          const card = this.renderAdaptiveCard(
+            rawWelcomeCard,
+            this.likeCountObj
+          );
           await context.sendActivity({ attachments: [card] });
           break;
         }
@@ -65,25 +69,31 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
     });
   }
 
-  async run(context: TurnContext) {
-    await super.run(context);
-
-    // Save any state changes. The load happened during the execution of the Dialog.
-    await this.conversationState.saveChanges(context, false);
-    await this.userState.saveChanges(context, false);
+  // Invoked when an action is taken on an Adaptive Card. The Adaptive Card sends an event to the Bot and this
+  // method handles that event.
+  async onAdaptiveCardInvoke(
+    context: TurnContext,
+    invokeValue: AdaptiveCardInvokeValue
+  ): Promise<AdaptiveCardInvokeResponse> {
+    // The verb "userlike" is sent from the Adaptive Card defined in adaptiveCards/welcome.json
+    if (invokeValue.action.verb === "userlike") {
+      this.likeCountObj.likeCount++;
+      const card = this.renderAdaptiveCard(rawWelcomeCard, this.likeCountObj);
+      await context.updateActivity({
+        type: "message",
+        id: context.activity.replyToId,
+        attachments: [card],
+      });
+      return { statusCode: 200, type: undefined, value: undefined };
+    }
   }
 
-  async handleTeamsSigninVerifyState(context: TurnContext, query: SigninStateVerificationQuery) {
-    console.log("Running dialog with signin/verifystate from an Invoke Activity.");
-    await this.dialog.run(context, this.dialogState);
-  }
-
-  async handleTeamsSigninTokenExchange(context: TurnContext, query: SigninStateVerificationQuery) {
-    await this.dialog.run(context, this.dialogState);
-  }
-
-  async onSignInInvoke(context: TurnContext) {
-    await this.dialog.run(context, this.dialogState);
+  // Bind AdaptiveCard with data
+  renderAdaptiveCard(rawCardTemplate: any, dataObj: any): Attachment {
+    const cardTemplate = new ACData.Template(rawCardTemplate);
+    const cardWithData = cardTemplate.expand({ $root: dataObj });
+    const card = CardFactory.adaptiveCard(cardWithData);
+    return card;
   }
   {{/IS_BOT}}
 
