--- a/templates/mustache-templates/teamsBot.ts.mustache
+++ b/templates/mustache-templates/teamsBot.ts.mustache
@@ -5,6 +5,7 @@ import * as querystring from "querystring";
 import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, Attachment, AdaptiveCardInvokeValue, AdaptiveCardInvokeResponse{{/IS_BOT}}} from "botbuilder";
 {{#IS_BOT}}
 const rawWelcomeCard = require("./adaptiveCards/welcome.json");
+const rawLearnCard = require("./adaptiveCards/learn.json");
 const ACData = require("adaptivecards-templating");
 {{/IS_BOT}}
 
@@ -33,17 +34,19 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
       // Trigger command by IM text
       switch (txt) {
         case "welcome": {
+          const card = this.renderAdaptiveCard(rawWelcomeCard);
+          await context.sendActivity({ attachments: [card] });
+          break;
+        }
+        case "learn": {
           this.likeCountObj.likeCount = 0;
-          const card = this.renderAdaptiveCard(
-            rawWelcomeCard,
-            this.likeCountObj
-          );
+          const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
           await context.sendActivity({ attachments: [card] });
           break;
         }
         /**
          * case "yourCommand": {
-         *   await context.sendActivity(`Add your command here!`);
+         *   await context.sendActivity(`Add your response here!`);
          *   break;
          * }
          */
@@ -57,10 +60,7 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
       const membersAdded = context.activity.membersAdded;
       for (let cnt = 0; cnt < membersAdded.length; cnt++) {
         if (membersAdded[cnt].id) {
-          const card = this.renderAdaptiveCard(
-            rawWelcomeCard,
-            this.likeCountObj
-          );
+          const card = this.renderAdaptiveCard(rawWelcomeCard);
           await context.sendActivity({ attachments: [card] });
           break;
         }
@@ -75,10 +75,10 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
     context: TurnContext,
     invokeValue: AdaptiveCardInvokeValue
   ): Promise<AdaptiveCardInvokeResponse> {
-    // The verb "userlike" is sent from the Adaptive Card defined in adaptiveCards/welcome.json
+    // The verb "userlike" is sent from the Adaptive Card defined in adaptiveCards/learn.json
     if (invokeValue.action.verb === "userlike") {
       this.likeCountObj.likeCount++;
-      const card = this.renderAdaptiveCard(rawWelcomeCard, this.likeCountObj);
+      const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
       await context.updateActivity({
         type: "message",
         id: context.activity.replyToId,
@@ -89,7 +89,7 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
   }
 
   // Bind AdaptiveCard with data
-  renderAdaptiveCard(rawCardTemplate: any, dataObj: any): Attachment {
+  renderAdaptiveCard(rawCardTemplate: any, dataObj?: any): Attachment {
     const cardTemplate = new ACData.Template(rawCardTemplate);
     const cardWithData = cardTemplate.expand({ $root: dataObj });
     const card = CardFactory.adaptiveCard(cardWithData);
