--- a/packages/vscode-extension/src/controls/tree.scss
+++ b/packages/vscode-extension/src/controls/tree.scss
@@ -38,6 +38,14 @@
         padding-right: 6px;
       }
     }
+
+    p {
+      opacity: 0.7;
+      margin-left: 0.5em;
+      font-size: 0.9em;
+      white-space: pre;
+      line-height: 22px;
+    }
   }
 
   button:hover {
