--- a/packages/vscode-extension/src/controls/SampleGallery.scss
+++ b/packages/vscode-extension/src/controls/SampleGallery.scss
@@ -113,8 +113,9 @@
     }
 
     .right-aligned {
-      margin-left: 190px;
       margin-right: 0px;
+      margin-left: 10px;
+      width: 85px;
     }
   }
 }
