--- a/templates/mustache-templates/teamsBot.js.mustache
+++ b/templates/mustache-templates/teamsBot.js.mustache
@@ -6,7 +6,7 @@ const { TeamsActivityHandler, CardFactory{{#IS_BOT}}, TurnContext{{/IS_BOT}}} = 
 {{#IS_BOT}}
 const rawWelcomeCard = require("./adaptiveCards/welcome.json");
 const rawLearnCard = require("./adaptiveCards/learn.json");
-const ACData = require("adaptivecards-templating");
+const cardTools = require("@microsoft/adaptivecards-tools");
 {{/IS_BOT}}
 
 class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
@@ -31,14 +31,14 @@ class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} ex
       // Trigger command by IM text
       switch (txt) {
         case "welcome": {
-          const card = this.renderAdaptiveCard(rawWelcomeCard);
-          await context.sendActivity({ attachments: [card] });
+          const card = cardTools.AdaptiveCards.declareWithoutData(rawWelcomeCard).render();
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
         case "learn": {
           this.likeCountObj.likeCount = 0;
-          const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
-          await context.sendActivity({ attachments: [card] });
+          const card = cardTools.AdaptiveCards.declare(rawLearnCard).render(this.likeCountObj);
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
         /**
@@ -58,8 +58,8 @@ class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} ex
       const membersAdded = context.activity.membersAdded;
       for (let cnt = 0; cnt < membersAdded.length; cnt++) {
         if (membersAdded[cnt].id) {
-          const card = this.renderAdaptiveCard(rawWelcomeCard);
-          await context.sendActivity({ attachments: [card] });
+          const card = cardTools.AdaptiveCards.declareWithoutData(rawWelcomeCard).render();
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
       }
@@ -73,22 +73,14 @@ class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} ex
     // The verb "userlike" is sent from the Adaptive Card defined in adaptiveCards/learn.json
     if (invokeValue.action.verb === "userlike") {
       this.likeCountObj.likeCount++;
-      const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
+      const card = cardTools.AdaptiveCards.declare(rawLearnCard).render(this.likeCountObj);
       await context.updateActivity({
         type: "message",
         id: context.activity.replyToId,
-        attachments: [card],
+        attachments: [CardFactory.adaptiveCard(card)],
       });
       return { statusCode: 200 };
     }
-  }
-
-  // Bind AdaptiveCard with data
-  renderAdaptiveCard(rawCardTemplate, dataObj) {
-    const cardTemplate = new ACData.Template(rawCardTemplate);
-    const cardWithData = cardTemplate.expand({ $root: dataObj });
-    const card = CardFactory.adaptiveCard(cardWithData);
-    return card;
   }
   {{/IS_BOT}}
 
