--- a/templates/mustache-templates/teamsBot.ts.mustache
+++ b/templates/mustache-templates/teamsBot.ts.mustache
@@ -2,11 +2,15 @@
 import { default as axios } from "axios";
 import * as querystring from "querystring";
 {{/IS_ME}}
-import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, Attachment, AdaptiveCardInvokeValue, AdaptiveCardInvokeResponse{{/IS_BOT}}} from "botbuilder";
+import { TeamsActivityHandler, CardFactory, TurnContext{{#IS_BOT}}, AdaptiveCardInvokeValue, AdaptiveCardInvokeResponse{{/IS_BOT}}} from "botbuilder";
 {{#IS_BOT}}
-const rawWelcomeCard = require("./adaptiveCards/welcome.json");
-const rawLearnCard = require("./adaptiveCards/learn.json");
-const ACData = require("adaptivecards-templating");
+import rawWelcomeCard from "./adaptiveCards/welcome.json"
+import rawLearnCard from "./adaptiveCards/learn.json"
+import { AdaptiveCards } from "@microsoft/adaptivecards-tools";
+
+export interface DataInterface {
+  likeCount: number
+}
 {{/IS_BOT}}
 
 export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_BOT}} extends TeamsActivityHandler {
@@ -34,14 +38,14 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
       // Trigger command by IM text
       switch (txt) {
         case "welcome": {
-          const card = this.renderAdaptiveCard(rawWelcomeCard);
-          await context.sendActivity({ attachments: [card] });
+          const card = AdaptiveCards.declareWithoutData(rawWelcomeCard).render();
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
         case "learn": {
           this.likeCountObj.likeCount = 0;
-          const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
-          await context.sendActivity({ attachments: [card] });
+          const card = AdaptiveCards.declare<DataInterface>(rawLearnCard).render(this.likeCountObj);
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
         /**
@@ -60,8 +64,8 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
       const membersAdded = context.activity.membersAdded;
       for (let cnt = 0; cnt < membersAdded.length; cnt++) {
         if (membersAdded[cnt].id) {
-          const card = this.renderAdaptiveCard(rawWelcomeCard);
-          await context.sendActivity({ attachments: [card] });
+          const card = AdaptiveCards.declareWithoutData(rawWelcomeCard).render();
+          await context.sendActivity({ attachments: [CardFactory.adaptiveCard(card)] });
           break;
         }
       }
@@ -78,22 +82,14 @@ export class {{#IS_BOT}}TeamsBot{{/IS_BOT}}{{^IS_BOT}}MessageExtensionBot{{/IS_B
     // The verb "userlike" is sent from the Adaptive Card defined in adaptiveCards/learn.json
     if (invokeValue.action.verb === "userlike") {
       this.likeCountObj.likeCount++;
-      const card = this.renderAdaptiveCard(rawLearnCard, this.likeCountObj);
+      const card = AdaptiveCards.declare<DataInterface>(rawLearnCard).render(this.likeCountObj);
       await context.updateActivity({
         type: "message",
         id: context.activity.replyToId,
-        attachments: [card],
+        attachments: [CardFactory.adaptiveCard(card)],
       });
       return { statusCode: 200, type: undefined, value: undefined };
     }
-  }
-
-  // Bind AdaptiveCard with data
-  renderAdaptiveCard(rawCardTemplate: any, dataObj?: any): Attachment {
-    const cardTemplate = new ACData.Template(rawCardTemplate);
-    const cardWithData = cardTemplate.expand({ $root: dataObj });
-    const card = CardFactory.adaptiveCard(cardWithData);
-    return card;
   }
   {{/IS_BOT}}
 
