--- a/packages/vscode-extension/src/controls/SampleGallery.scss
+++ b/packages/vscode-extension/src/controls/SampleGallery.scss
@@ -51,7 +51,7 @@
     background-color: var(--vscode-editorWidget-background);
     border-radius: 2px;
     width: 278px;
-    height: 400px;
+    height: 455px;
     position: relative;
 
     .section {
@@ -74,13 +74,45 @@
       white-space: nowrap;
     }
 
+    .estimation-time{
+      padding-left: 8px;
+      height: 20px;
+      color: var(--vscode-titleBar-activeForeground);
+      display: flex;
+      font-size: 11px;
+      margin-top: 8px;
+      margin-bottom: 2px;
+
+      .ms-Image{
+        margin-top: auto;
+        margin-bottom: auto;
+      }
+    }
+
+    .configuration{
+      padding-left: 8px;
+      height: auto;
+      color: var(--vscode-titleBar-activeForeground);
+      display: flex;
+      font-size: 11px;
+
+      .ms-Image{
+        margin-top: auto;
+        margin-bottom: auto;
+      }
+
+      label{
+        width: 242px;
+      }
+    }
+
     h2 {
       font-size: 13px;
       text-align: center;
       color: var(--vscode-titleBar-activeForeground);
       font-weight: 700;
       text-align: left;
-      margin: 12px 12px 0px 12px;
+      margin: 8px 12px 0px 12px;
     }
 
     h3 {
