feat(vs): add blazor scaffold, fix tpl

--- a/templates/mustache-templates/BlazorAppServer.csproj.mustache
+++ b/templates/mustache-templates/BlazorAppServer.csproj.mustache
@@ -17,8 +17,7 @@
     <PackageReference Include="Microsoft.Bot.Builder" Version="4.14.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.14.1" />
     <PackageReference Include="AdaptiveCards.Templating" Version="1.2.2" />
-{{/IS_BOT}}
-{{#IS_TAB}}
+{{/IS_BOT}}{{#IS_TAB}}
     <PackageReference Include="Microsoft.Fast.Components.FluentUI" Version="1.0.0" />
     <PackageReference Include="Microsoft.TeamsFx.SimpleAuth" Version="0.1.1" />
     <PackageReference Include="Microsoft.TeamsFx" Version="0.3.0-rc" />
