--- a/templates/mustache-templates/Program.cs.mustache
+++ b/templates/mustache-templates/Program.cs.mustache
@@ -7,8 +7,7 @@ using {{placeholder}};
 {{#IS_TAB}}
 using Microsoft.TeamsFx.SimpleAuth;
 using {{placeholder}}.Interop.TeamsSDK;
-{{/IS_TAB}}
-{{#IS_BOT}}
+{{/IS_TAB}}{{#IS_BOT}}
 using {{placeholder}}.Bots;
 using Microsoft.Bot.Builder;
 using Microsoft.Bot.Builder.Integration.AspNet.Core;
