--- a/templates/mustache-templates/appsettings.json.mustache
+++ b/templates/mustache-templates/appsettings.json.mustache
@@ -23,8 +23,7 @@
       "InitiateLoginEndpoint": "$appEndPoint$auth-start.html"
     }
   }
-{{/IS_TAB}}
-{{#IS_BOT}}
+{{/IS_TAB}}{{#IS_BOT}}
   ,
   "BOT_ID": "$botId$",
   "BOT_PASSWORD": "$bot-password$"
