perf: update tab template

--- a/templates/tab/js/default/public/auth-end.html
+++ b/templates/tab/js/default/public/auth-end.html
@@ -47,7 +47,7 @@
             }
           })
           .catch((error) => {
-            microsoftTeams.authentication.notifyFailure(error);
+            microsoftTeams.authentication.notifyFailure(JSON.stringify(error));
           });
       })
     </script>
