fix(dotnet): add readme content

--- a/templates/tab/csharp/default/Components/Deploy.razor
+++ b/templates/tab/csharp/default/Components/Deploy.razor
@@ -5,8 +5,8 @@
 		app's resources to the cloud to make sure your app will be running smoothly!
 	</p>
 	<p>
-		Select the <strong>Project > Teams Toolkit > Provision</strong> menu item to provision your app's resources.
-		Next, select the <strong>Project > Teams Toolkit > Deploy</strong> menu item to deploy your app to Azure.
+		Select the <strong>Project > Teams Toolkit > Provision in the Cloud</strong> menu item to provision your app's resources.
+		Next, select the <strong>Project > Teams Toolkit > Deploy to the Cloud</strong> menu item to deploy your app to Azure.
 	</p>
 </div>
 
