fix(dotnet): update readme content, change launch settings

--- a/templates/tab/csharp/default/Components/Welcome.razor
+++ b/templates/tab/csharp/default/Components/Welcome.razor
@@ -23,7 +23,7 @@ else
             <p class="center">Your app is running in your @(GetEnvironmentName())</p>
             <FluentTabs style="width: 80%; justify-content: space-between; margin: 4rem auto;">
                 <FluentTab style="font-size: 14px; min-height: 32px;">1. Build your app locally</FluentTab>
-                <FluentTab>2. Publish and Deploy to the Cloud</FluentTab>
+                <FluentTab>2. Provision and Deploy to the Cloud</FluentTab>
                 <FluentTab>3. Publish to Teams</FluentTab>
                 <FluentTabPanel>
                     <div style="display:block; width:100%;">
