--- a/packages/fx-core/templates/plugins/resource/aad/auth/bot/ts/public/auth-end.html
+++ b/packages/fx-core/templates/plugins/resource/aad/auth/bot/ts/public/auth-end.html
@@ -37,7 +37,7 @@
 
       // Parse hash parameters into key-value pairs
       function getHashParameters() {
-        let hashParams = {};
+        let hashParams = new Map();
         location.hash
           .substr(1)
           .split("&")
