--- a/templates/tab/ts/dashboard/src/index.css
+++ b/templates/tab/ts/dashboard/src/index.css
@@ -8,10 +8,10 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: auto;  
+  overflow: auto;
+  margin: 0;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+  display: none;
 }
