chore: update the dashboard js template using SDK

--- a/templates/scenarios/js/dashboard-tab/src/index.css
+++ b/templates/scenarios/js/dashboard-tab/src/index.css
@@ -12,6 +12,5 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+  display: none;
 }
