--- a/templates/scenarios/ts/dashboard-tab/src/styles/ChartWidget.css
+++ b/templates/scenarios/ts/dashboard-tab/src/styles/ChartWidget.css
@@ -1,32 +1,33 @@
-.chart-selector {
+.time-span {
   display: grid;
+  gap: var(--spacingVerticalXL) var(--spacingHorizontalXL);
   grid-template-columns: repeat(3, max-content);
-  gap: 1rem;
 }
 
-.chart-selector button {
+.time-span button {
   font-size: var(--fontSizeBase100);
   line-height: var(--lineHeightBase100);
+  min-width: max-content;
 }
 
-.chart {
+.area-chart {
   position: relative;
   height: 200px;
   width: 100%;
 }
 
-.chart .tick text {
+.area-chart .tick text {
   fill: var(--colorNeutralForeground1);
 }
 
-.chart div {
+.area-chart div {
   color: var(--colorNeutralForeground1);
 }
 
-.chart line {
+.area-chart line {
   stroke: var(--colorNeutralStroke2);
 }
 
-.chart-footer button {
+#chart-footer {
   color: var(--colorBrandForeground1);
 }
