--- a/templates/scenarios/ts/non-sso-tab/src/views/privacy.html
+++ b/templates/scenarios/ts/non-sso-tab/src/views/privacy.html
@@ -1,11 +1,11 @@
 <html lang="en">
   <head>
-    <title>Privacy</title>
+    <title>Microsoft Teams Tab</title>
   </head>
 
   <body>
     <div>
-      <h1>Privacy</h1>
+      <h1>Privacy Statement</h1>
     </div>
   </body>
 </html>
