--- a/templates/scenarios/ts/non-sso-tab/src/views/hello.html
+++ b/templates/scenarios/ts/non-sso-tab/src/views/hello.html
@@ -18,8 +18,8 @@
     <div>
       <h1>Hello, World</h1>
       <span>
-        <p>Your app is running in</p>
-        <p id="hubName"></p>
+        <p>Your app is running</p>
+        <p id="hubState"></p>
       </span>
     </div>
     <script type="text/javascript">
